# InfoDisplay

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  infodisplay
src/: Schedule.cpp  Schedule.h  main.cpp
